Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <div class="question">
     <label>14. Z jakého důvodu děláte ve školství</label>
     <select name="q14">
-        <option value="A">Od základní školy chci děkat vyučujícího</option>
+        <option value="A">Od základní školy chci dělat vyučujícího</option>
         <option value="B">Hodně mě baví práce s dětmi</option>
         <option value="C">Nevědel jsem co dělat</option>
         <option value="D">Dovedl mě sem</option>
@@ -168,4 +168,5 @@
 </body>
 
 </html>
+
 
