Update logo and form structure in index.html
Změna loga na valentýnské logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <div class="card">
     <div class="header">
-        <img src="horaklogo.png" alt="Logo Horák"> 
+        <img src="valentynlogo.png" alt="Logo valentýn"> 
         <h1>Perfect Match: Sborovna</h1>
         <p>Jakému vyučujícímu se nejvíc podobáte</p>
 
@@ -168,5 +168,6 @@
 </body>
 
 </html>
+
 
 
