Fix HTML encoding issues in index.html
Gramatické chyby

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="question">
-            <label>1. Jaký styl ranního probuzení vás vystihuje?</label>
+            <label>1. Jaký styl ranního probuzení Vás vystihuje?</label>
             <select name="q1">
                 <option value="A">Tři silná kafe a jdu na věc</option>
                 <option value="B">Pomalý čaj a meditace nad rozvrhem</option>
@@ -39,7 +39,7 @@
         </div>
 
         <div class="question">
-            <label>3. Jaký je váš přístup k technologiím ve výuce?</label>
+            <label>3. Jaký je Váš přístup k technologiím ve výuce?</label>
             <select name="q3">
                 <option value="A">Nejraději bych se vrátil k tabuli a křídám</option>
                 <option value="B">Používám technologie, ale s mírou</option>
@@ -49,7 +49,7 @@
         </div>
 
         <div class="question">
-            <label>4. Jaký je váš oblíbený způsob komunikace s kolegy?</label>
+            <label>4. Jaký je Váš oblíbený způsob komunikace s kolegy?</label>
             <select name="q4">
                 <option value="A">E-mail</option>
                 <option value="B">Osobní rozhovor</option>
@@ -58,7 +58,7 @@
         </div>
 
         <div class="question">
-            <label>5. Jaký je váš přístup k přípravě na hodiny?</label>
+            <label>5. Jaký je Váš přístup k přípravě na hodiny?</label>
             <select name="q5">
                 <option value="A">Připravuji se detailně a s předstihem</option>
                 <option value="B">Připravuji se, ale často improvizuji</option>
@@ -67,7 +67,7 @@
         </div>
 
         <div class="question">
-            <label>6. Jaký je váš oblíbený způsob relaxace po náročném dni?</label>
+            <label>6. Jaký je Váš oblíbený způsob relaxace po náročném dni?</label>
             <select name="q6">
                 <option value="A">Čtení knihy nebo sledování filmu</option>
                 <option value="B">Sport nebo procházka na čerstvém vzduchu</option>
@@ -77,7 +77,7 @@
         </div>
 
         <div class="question">
-            <label>7. Jaký je váš přístup k opravování testů?</label>
+            <label>7. Jaký je Váš přístup k opravování testů?</label>
             <select name="q7">
                 <option value="A">Udělám to hned ve škole</option>
                 <option value="B">Beru to domů a dělám v klidu</option>
@@ -86,7 +86,7 @@
         </div>
 
         <div class="question">
-    <label>8. Jaký je váš nejoblíbenější sport (aktivně i pasivně)?</label>
+    <label>8. Jaký je Váš nejoblíbenější sport (aktivně i pasivně)?</label>
     <select name="q8">
         <option value="A">Míčové hry (fotbal, volejbal, tenis...)</option>
         <option value="B">Individuální sporty (běh, plavání, kolo...)</option>
@@ -97,7 +97,7 @@
 </div>
 
 <div class="question">
-    <label>9. Jaký je váš největší koníček ve volném čase?</label>
+    <label>9. Jaký je Váš největší koníček ve volném čase?</label>
     <select name="q9">
         <option value="A">Cestování a příroda</option>
         <option value="B">Knihy, filmy nebo divadlo</option>
@@ -130,7 +130,7 @@
 </div>
 
 <div class="question">
-    <label>12. Jaký je váš postoj k pozdním příchodům žáků?</label>
+    <label>12. Jaký je Váš postoj k pozdním příchodům žáků?</label>
     <select name="q12">
         <option value="A">Píšu hned zápis, pravidla jsou pravidla</option>
         <option value="B">Vyslechnu si výmluvu a mávnu rukou</option>
@@ -154,8 +154,8 @@
     <select name="q14">
         <option value="A">Od základní školy chci dělat vyučujícího</option>
         <option value="B">Hodně mě baví práce s dětmi</option>
-        <option value="C">Nevědel jsem co dělat</option>
-        <option value="D">Dovedl mě sem</option>
+        <option value="C">Nevědel/a jsem co dělat</option>
+        <option value="D">Dovedl mě sem osud</option>
     </select>
 </div>
 
@@ -168,6 +168,7 @@
 </body>
 
 </html>
+
 
 
 
